# Handwritten_Digit_Recognition

./: .gitignore  Dockerfile  README.md  config.json  generate_model.py  handwritten_digit_model.h5  mnist_cnn_training.py  mnist_model_predictor.py  mnist_model_predictor_2.py  model_generator.py  predict_digit_gui.py  pyproject.toml  requirements.txt  test_2.py
02/: mnist_cnn_training.py
03/: mnist_model_predictor_2.py  model_generator.py  test.py
app/: main.py  train_model.py
app/model/: mnist_model.h5
app/templates/: index.html
src/: config_loader.py  generate_model.py  predict_digit_gui.py  terminal_display.py  train_model.py
test_1/: mnist_classification.py
