[project]
name = "handwritten-digit-recognition"
version = "0.1.0"
description = "A simple handwritten digit recognition model using Keras and TensorFlow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "pillow>=11.0.0",
    "tensorflow>=2.18.0",
    "tensorflow-cpu>=2.18.0",
    "scipy>=1.14.1",
    "pyqt5>=5.15.11",
]
